<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_circle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:background="@drawable/dialog_background"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TitleDialog24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="41dp"
                android:text="@string/report_user" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/DescriptionDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="24dp"
                android:gravity="center_horizontal"
                android:text="@string/question_report" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/additional_report">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/additional_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.mitra.view.MitraButton
                android:id="@+id/other_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="16dp"
                android:text="@string/send" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_report" />
    </FrameLayout>
</FrameLayout>