<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_circle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:background="@drawable/dialog_background"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TitleDialog24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="42dp"
                android:gravity="center"
                android:text="@string/you_banned" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/DescriptionDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/banned_description" />

            <com.mitra.view.MitraButton
                android:id="@+id/okay"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/banned_leave_mitra" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_reported" />
    </FrameLayout>
</FrameLayout>