<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.splash.SplashFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_splash_screen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/splash_text_1"
            android:textStyle="bold"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:text="@string/splash_text_2"
            android:textColor="#2F3538"
            android:textSize="16sp"
            app:fontFamily="@font/rubik_regular"
            app:lineHeight="24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/first_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone"
        tools:visibility="visible">

        <com.mitra.view.MitraButton
            android:id="@+id/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textColorLink="@color/green"
            android:textSize="12sp"
            app:fontFamily="@font/rubik_regular" />

    </LinearLayout>

</FrameLayout>