<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/HintTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/closing_chet"
                android:textAllCaps="true" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:fontFamily="@font/rubik_regular"
                    android:text="@string/vibration"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/vibration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:button="@drawable/selector_switcher"
                    android:thumb="@null"
                    app:track="@null" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:background="#EDEDED" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:fontFamily="@font/rubik_regular"
                    android:text="@string/sound"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:button="@drawable/selector_switcher"
                    android:thumb="@null"
                    app:track="@null" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:background="@android:color/white">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/HintTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/information"
                android:textAllCaps="true" />
            <FrameLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:fontFamily="@font/rubik_regular"
                    android:text="@string/email"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp" />

                <View
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/ic_arrow_right"
                    android:layout_marginEnd="16dp" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:background="#EDEDED" />
            <FrameLayout
                android:id="@+id/rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:fontFamily="@font/rubik_regular"
                    android:text="@string/market"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp" />

                <View
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/ic_arrow_right"
                    android:layout_marginEnd="16dp" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:background="#EDEDED" />
            <FrameLayout
                android:id="@+id/agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:fontFamily="@font/rubik_regular"
                    android:text="@string/agreement"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp" />

                <View
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/ic_arrow_right"
                    android:layout_marginEnd="16dp" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:background="#EDEDED" />
            <FrameLayout
                android:id="@+id/posting_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:fontFamily="@font/rubik_regular"
                    android:text="@string/rules"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp" />

                <View
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/ic_arrow_right"
                    android:layout_marginEnd="16dp" />
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>